fixed header on tablet

--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -46,7 +46,7 @@
 
     @include on-tablet {
       padding-block: 80px 228px;
-      grid-template-rows: 1fr 2fr max-content;
+      grid-template-rows: 1fr 3fr max-content;
     }
 
     @include on-desktop {
@@ -97,9 +97,11 @@
       font-size: 80px;
       margin-bottom: 65px;
       padding-top: 36px;
+      margin-bottom: 210px;
     }
 
     @include on-desktop {
+      margin-bottom: auto;
       font-size: 136px;
       padding-top: 12px;
       letter-spacing: -0.06em;
@@ -118,11 +120,13 @@
 
     @include on-tablet {
       grid-column: 3 / 7;
+      // margin-top: 210px;
     }
 
     @include on-desktop {
       grid-column: 1 / 3;
       margin-bottom: auto;
+      // margin-top: 0;
     }
   }
 }
